--- a/AZDORestApiExplorer/App.config
+++ b/AZDORestApiExplorer/App.config
@@ -8,10 +8,12 @@
                 EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
             requirePermission="false" />
 
-        <section
+		<section
             name="loggingConfiguration"
             type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings,
-                Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0" />
+                Microsoft.Practices.EnterpriseLibrary.Logging, 
+				Version=6.0.0.0, Culture=neutral, 
+				PublicKeyToken=d702d1a3426498a0" />
 
     </configSections>
 
@@ -41,48 +43,113 @@
         tracingEnabled="true"
         defaultCategory="General"
         logWarningsWhenNoCategoriesMatch="true">
-        <listeners>
-            <!--<add
-                name="FlatFile TraceListener"
-                fileName="C:\temp\logs\AZDORestApiExplorer.log"
-                header="" footer=""
-                formatter="FlatFile Formatter"
-                listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData,
-                    Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0"
-                traceOutputOptions="None"
-                type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener,
-                    Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0" />-->
-            <!--<add
-                name="Formatted EventLog TraceListener"
-                source="Enterprise Library Logging"
-                formatter="Text Formatter"
-                log="Application"
-                machineName=""
-                listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData,
-                    Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0"
-                traceOutputOptions="None"
-                type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener,
-                    Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0" />-->
+		<listeners>
+			<!--<add
+              name="Database TraceListener"
+              type="Microsoft.Practices.EnterpriseLibrary.Logging.Database.FormattedDatabaseTraceListener,
+                Microsoft.Practices.EnterpriseLibrary.Logging.Database,
+                Version=6.0.1304.0,
+                Culture=neutral, PublicKeyToken=d702d1a3426498a0"
+              listenerDataType="
+                Microsoft.Practices.EnterpriseLibrary.Logging.Database.Configuration.FormattedDatabaseTraceListenerData,
+                Microsoft.Practices.EnterpriseLibrary.Logging.Database,
+                Version=6.0.0.0,
+              Culture=neutral,
+              PublicKeyToken=d702d1a3426498a0"
+              databaseInstanceName="LOGDB"
+              writeLogStoredProcName="WriteLog"
+              addCategoryStoredProcName="AddCategory"
+              traceOutputOptions="DateTime, Timestamp, ProcessId"/>-->
 
-            <add
-                name="Rolling Flat File Trace Listener"
+			<!--<add name="Email TraceListener"
+                type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.EmailTraceListener,
+                Microsoft.Practices.EnterpriseLibrary.Logging,
+                Version=6.0.0.0,
+                Culture=neutral,
+                PublicKeyToken=d702d1a3426498a0"
+                listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.EmailTraceListenerData,
+                Microsoft.Practices.EnterpriseLibrary.Logging,
+                Version=6.0.0.0,
+                Culture=neutral,
+                PublicKeyToken=d702d1a3426498a0"
+                toAddress="chrhodes@cox.net" fromAddress="chrhodes@cox.net"
+                smtpServer="smtp.gmail.com" smtpPort="587"
+                 userName="chrhodesvnc@gmail.com" password="eoP^^r10"/>-->
+
+			<!--<add name="Email TraceListener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.EmailTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0"
+              listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.EmailTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0"
+              toAddress="chrhodesvnc@gmail.com" fromAddress="chrhodes@cox.net"
+              subjectLineStarter="In" subjectLineEnder="Out" smtpServer="smtp.gmail.com"
+              smtpPort="465" formatter="Text Formatter" authenticationMode="UserNameAndPassword"
+              useSSL="true" userName="chrhodesvnc@gmail.com" password="eoP^^r10"
+              traceOutputOptions="Timestamp" />-->
+
+			<add
+				name="FlatFile TraceListener"
+				type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener,
+                Microsoft.Practices.EnterpriseLibrary.Logging,
+                Version=6.0.0.0,
+                Culture=neutral,
+                PublicKeyToken=d702d1a3426498a0"
+				listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData,
+                Microsoft.Practices.EnterpriseLibrary.Logging,
+                Version=6.0.0.0,
+                Culture=neutral,
+                PublicKeyToken=d702d1a3426498a0"
+				fileName="C:\temp\logs\VNCLogViewer.log"
+				header="" footer=""
+				formatter="FlatFile Formatter"
+				traceOutputOptions="None" />
+
+			<!--<add
+              name="Formatted EventLog TraceListener"
+              type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener,
+                Microsoft.Practices.EnterpriseLibrary.Logging,
+                Version=6.0.0.0,
+                Culture=neutral,
+                PublicKeyToken=d702d1a3426498a0"
+              listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData,
+                Microsoft.Practices.EnterpriseLibrary.Logging,
+                Version=6.0.0.0,
+                Culture=neutral,
+                PublicKeyToken=d702d1a3426498a0"
+              source="Enterprise Library Logging"
+              formatter="Text Formatter"
+              log="Application"
+              machineName=""
+              traceOutputOptions="None" />-->
+
+			<add
+                name="Rolling FlatFile TraceListener"
                 type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener,
-                       Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0"
+                       Microsoft.Practices.EnterpriseLibrary.Logging,
+                       Version=6.0.0.0,
+                       Culture=neutral,
+                       PublicKeyToken=d702d1a3426498a0"
                 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData,
-                    Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0"
+                    Microsoft.Practices.EnterpriseLibrary.Logging,
+                    Version=6.0.0.0,
+                    Culture=neutral,
+                    PublicKeyToken=d702d1a3426498a0"
                 fileName="C:\temp\logs\AZDORestApiExplorer.log"
                 header="" footer=""
                 rollInterval="Day" maxArchivedFiles="7"
                 formatter="FlatFile Formatter" />
 
-            <add
-                name="SignalRListener"
-                type="VNC.Logging.TraceListeners.SignalRListener,
-                       VNC.Logging, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6621de8a79b51ca3"
+			<add
+                name="SignalRCoreListener"
+                type="VNC.Logging.TraceListeners.SignalRCoreListener,
+                       VNC.Logging.TraceListeners.SignalRCoreListener,
+                       Version=1.0.0.0,
+                       Culture=neutral,
+                       PublicKeyToken=6621de8a79b51ca3"
                 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.CustomTraceListenerData,
-                    Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0"
+                    Microsoft.Practices.EnterpriseLibrary.Logging,
+                    Version=6.0.0.0,
+                    Culture=neutral,
+                    PublicKeyToken=d702d1a3426498a0"
                 formatter="LiveView Formatter" />
-        </listeners>
+		</listeners>
 
         <formatters>
             <add
@@ -149,41 +216,41 @@
         <categorySources>
           <add switchValue="All" name="General">
             <listeners>
-                <add name="SignalRListener" />
-                <add name="Rolling Flat File Trace Listener" />
+				<add name="Rolling FlatFile TraceListener" />
+				<add name="SignalRCoreListener" />
             </listeners>
           </add>
           <add switchValue="All" name="AZDORestApiExplorer">
             <listeners>
-                <add name="SignalRListener" />
-                <add name="Rolling Flat File Trace Listener" />
+				<add name="Rolling FlatFile TraceListener" />
+				<add name="SignalRCoreListener" />
             </listeners>
           </add>
 
             <add switchValue="All" name="AZDORestApiExplorerCategory">
                 <listeners>
-                    <add name="SignalRListener" />
-                    <add name="Rolling Flat File Trace Listener" />
+					<add name="Rolling FlatFile TraceListener" />
+					<add name="SignalRCoreListener" />
                 </listeners>
             </add>            
 
             <add switchValue="All" name="AZDORestApiExplorerCore">
                 <listeners>
-                    <add name="SignalRListener" />
-                    <add name="Rolling Flat File Trace Listener" />
+					<add name="Rolling FlatFile TraceListener" />
+					<add name="SignalRCoreListener" />
                 </listeners>
             </add>
 
             <add switchValue="All" name="AZDORestApiExplorerDomain">
                 <listeners>
-                    <add name="SignalRListener" />
-                    <add name="Rolling Flat File Trace Listener" />
+					<add name="Rolling FlatFile TraceListener" />
+					<add name="SignalRCoreListener" />
                 </listeners>
             </add>            
             <add switchValue="All" name="VNCCore">
             <listeners>
-                <add name="SignalRListener" />
-                <add name="Rolling Flat File Trace Listener" />
+				<add name="Rolling FlatFile TraceListener" />
+				<add name="SignalRCoreListener" />
             </listeners>
           </add>
           <!--<add switchValue="All" name="AZDORestApiExplorer_Persistence">
@@ -206,13 +273,14 @@
             <allEvents switchValue="All" name="All Events" />
             <notProcessed switchValue="All" name="Unprocessed Category">
                 <listeners>
-                    <add name="Rolling Flat File Trace Listener" />
+					<add name="Rolling FlatFile TraceListener" />
+					<add name="SignalRCoreListener" />
                 </listeners>
             </notProcessed>
             <errors switchValue="All" name="Logging Errors &amp; Warnings">
                 <listeners>
-                    <add name="SignalRListener" />
-                    <add name="Rolling Flat File Trace Listener" />
+					<add name="Rolling FlatFile TraceListener" />
+					<add name="SignalRCoreListener" />
                     <!--<add name="Formatted EventLog TraceListener" />-->
                 </listeners>
             </errors>
